--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
-    - uses: actions/setup-go@v3
+    - uses: actions/setup-go@v4
       with:
         go-version: '1.24' # The Go version to download (if necessary) and use.
     - name: download golangci.yml
@@ -28,7 +28,7 @@ jobs:
         args: --timeout 5m --new-from-rev=HEAD~1 --issues-exit-code=0
     - name: Run tests
       run: |
-        GOPATH="$(dirname ${PWD})" golangci-lint run --out-format checkstyle ./... > golangci-lint-report.out || true
+        golangci-lint run --out-format checkstyle ./... > golangci-lint-report.out || true
         go test -coverprofile=coverage.out -json ./... > test-report.out
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
