--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -11,27 +11,26 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    container: 
+      image: ghcr.io/rytsh/dock/build/go:1.25.0
+      options: --privileged
+    services:
+      docker:
+        image: docker:24-dind
+        options: --privileged
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          # stable: 'false' # Keep this line to be able to use rc and beta version of Go (ex: 1.18.0-rc1).
-          go-version: 1.24
-      - name: Unshallow
-        run: git fetch --prune --unshallow
-
+      - uses: actions/checkout@v4
+      - name: Install Docker CLI
+        run: |
+          apt-get update
+          apt-get install -y docker-cli
+          git config --global --add safe.directory /__w/saz/saz
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends unixodbc-dev
       - name: Create release
         uses: goreleaser/goreleaser-action@v3
         with:
