fix: update builds
Signed-off-by: Eray Ates <eates23@gmail.com>

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -5,6 +5,6 @@ FROM ${DB_IMAGE}
 RUN apt-get update && apt-get install --no-install-recommends -y \
     netcat-openbsd ca-certificates curl iputils-ping dnsutils
 
-COPY saz /usr/local/bin/saz
+COPY saz /saz
 
 ENTRYPOINT ["/saz"]
